--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "name": "maxigram",
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.2",
+        "emoji-picker-element": "^1.22.8",
         "flowbite": "^2.5.2",
         "laravel-echo": "^1.16.1",
         "vue": "latest",
